// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flags > AustriaFlag > renders AustriaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M14.565 10.435A7 7 0 0 0 15 8c0-.856-.154-1.676-.435-2.435L8 4.957l-6.565.608A7 7 0 0 0 1 8c0 .856.154 1.677.435 2.435L8 11.044z"
      fill="#f0f0f0"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15M8 1C4.99 1 2.425 2.9 1.435 5.565h13.13A7 7 0 0 0 8 1"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M14.565 10.435A7 7 0 0 0 15 8c0-.856-.154-1.676-.435-2.435L8 4.957l-6.565.608A7 7 0 0 0 1 8c0 .856.154 1.677.435 2.435L8 11.044z"
      fill="#f0f0f0"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15M8 1C4.99 1 2.425 2.9 1.435 5.565h13.13A7 7 0 0 0 8 1"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      AustriaFlag
    </title>
    <path
      d="M20.91 15.305c.381-1.03.59-2.143.59-3.305a9.5 9.5 0 0 0-.59-3.304L12 7.87l-8.91.826A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.305l8.91.826z"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5m0-19a9.5 9.5 0 0 0-8.91 6.196h17.82A9.5 9.5 0 0 0 12 2.5"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M10.435 1.435A7 7 0 0 0 8 1c-.856 0-1.676.154-2.435.435L4.957 8l.608 6.565A7 7 0 0 0 8 15c.856 0 1.677-.154 2.435-.435L11.044 8z"
      fill="#ffda44"
    />
    <path
      d="M15 8c0-3.01-1.9-5.576-4.565-6.565v13.13A7 7 0 0 0 15 8"
      fill="#d80027"
    />
    <path
      d="M1 8c0 3.01 1.9 5.575 4.565 6.565V1.435A7 7 0 0 0 1 8"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M10.435 1.435A7 7 0 0 0 8 1c-.856 0-1.676.154-2.435.435L4.957 8l.608 6.565A7 7 0 0 0 8 15c.856 0 1.677-.154 2.435-.435L11.044 8z"
      fill="#ffda44"
    />
    <path
      d="M15 8c0-3.01-1.9-5.576-4.565-6.565v13.13A7 7 0 0 0 15 8"
      fill="#d80027"
    />
    <path
      d="M1 8c0 3.01 1.9 5.575 4.565 6.565V1.435A7 7 0 0 0 1 8"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#d5d5d5"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#454545"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BelgiumFlag
    </title>
    <path
      d="M15.305 3.09A9.5 9.5 0 0 0 12 2.5a9.5 9.5 0 0 0-3.304.59L7.87 12l.826 8.91A9.5 9.5 0 0 0 12 21.5a9.5 9.5 0 0 0 3.305-.59L16.13 12z"
      fill="#ffda44"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.909V3.091A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8"
      fill="#496e2d"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15"
      fill="#d80027"
    />
    <path
      d="M1.435 5.565h13.13a7.003 7.003 0 0 0-13.13 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8"
      fill="#496e2d"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15"
      fill="#d80027"
    />
    <path
      d="M1.435 5.565h13.13a7.003 7.003 0 0 0-13.13 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#5c5c5c"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#454545"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      BulgariaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#496e2d"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#d80027"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8"
      fill="#f0f0f0"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15"
      fill="#0052b4"
    />
    <path
      d="M1.435 5.565h13.13a7.003 7.003 0 0 0-13.13 0"
      fill="#d80027"
    />
    <path
      d="M9.826 5.87H8.61l.203-1.522.811-.609.812.609v1.217zm-3.652 0H7.39l-.203-1.522-.811-.609-.812.609v1.217z"
      fill="#338af3"
    />
    <path
      d="M8.811 5.87H7.188V4.348L8 3.739l.811.609z"
      fill="#0052b4"
    />
    <path
      d="M5.565 5.565v3.348c0 .797.385 1.506.98 1.95l.425-.106.538.54a2.4 2.4 0 0 0 .981.001l.614-.51.353.075a2.43 2.43 0 0 0 .979-1.95V5.565z"
      fill="#f0f0f0"
    />
    <path
      d="M5.565 5.565h.974v.974h-.974zm1.948 0h.974v.974h-.974zm1.948 0h.974v.974H9.46zm-2.922.975h.974v.973h-.974zm1.948 0h.974v.973h-.974zm-2.922.973h.974v.974h-.974zm.974.974h.974v.974h-.974zm.974-.974h.974v.974h-.974zm1.948 0h.974v.974H9.46zm-.974.974h.974v.974h-.974zm-.974.973h.974v.974h-.974z"
      fill="#d80027"
    />
    <path
      d="M6.54 9.46h-.912c.084.363.248.694.473.974h.438zm2.921.975h.438c.225-.281.39-.612.473-.974h-.911zm-2.922 0v.425c.283.213.614.366.974.439v-.864zm1.948 0v.864c.36-.073.69-.226.974-.44v-.424z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8"
      fill="#f0f0f0"
    />
    <path
      d="M8 15c3.01 0 5.576-1.9 6.565-4.565H1.435A7 7 0 0 0 8 15"
      fill="#0052b4"
    />
    <path
      d="M1.435 5.565h13.13a7.003 7.003 0 0 0-13.13 0"
      fill="#d80027"
    />
    <path
      d="M9.826 5.87H8.61l.203-1.522.811-.609.812.609v1.217zm-3.652 0H7.39l-.203-1.522-.811-.609-.812.609v1.217z"
      fill="#338af3"
    />
    <path
      d="M8.811 5.87H7.188V4.348L8 3.739l.811.609z"
      fill="#0052b4"
    />
    <path
      d="M5.565 5.565v3.348c0 .797.385 1.506.98 1.95l.425-.106.538.54a2.4 2.4 0 0 0 .981.001l.614-.51.353.075a2.43 2.43 0 0 0 .979-1.95V5.565z"
      fill="#f0f0f0"
    />
    <path
      d="M5.565 5.565h.974v.974h-.974zm1.948 0h.974v.974h-.974zm1.948 0h.974v.974H9.46zm-2.922.975h.974v.973h-.974zm1.948 0h.974v.973h-.974zm-2.922.973h.974v.974h-.974zm.974.974h.974v.974h-.974zm.974-.974h.974v.974h-.974zm1.948 0h.974v.974H9.46zm-.974.974h.974v.974h-.974zm-.974.973h.974v.974h-.974z"
      fill="#d80027"
    />
    <path
      d="M6.54 9.46h-.912c.084.363.248.694.473.974h.438zm2.921.975h.438c.225-.281.39-.612.473-.974h-.911zm-2.922 0v.425c.283.213.614.366.974.439v-.864zm1.948 0v.864c.36-.073.69-.226.974-.44v-.424z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#444"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#454545"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#7b7b7b"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#454545"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CroatiaFlag
    </title>
    <path
      d="M21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12"
      fill="#f0f0f0"
    />
    <path
      d="M12 21.5a9.5 9.5 0 0 0 8.91-6.196H3.09A9.5 9.5 0 0 0 12 21.5"
      fill="#0052b4"
    />
    <path
      d="M3.091 8.696h17.818a9.504 9.504 0 0 0-17.818 0"
      fill="#d80027"
    />
    <path
      d="M14.478 9.109h-1.652l.276-2.065 1.101-.827 1.102.827v1.652zm-4.956 0h1.652l-.275-2.065-1.102-.827-1.101.827v1.652z"
      fill="#338af3"
    />
    <path
      d="M13.101 9.109h-2.203V7.044L12 6.217l1.101.827z"
      fill="#0052b4"
    />
    <path
      d="M8.696 8.696v4.543a3.3 3.3 0 0 0 1.328 2.647l.579-.144.73.734a3.3 3.3 0 0 0 1.331 0l.833-.693.479.102a3.3 3.3 0 0 0 1.328-2.646V8.696z"
      fill="#f0f0f0"
    />
    <path
      d="M8.696 8.696h1.321v1.321H8.696zm2.643 0h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-3.966 1.321h1.322v1.322h-1.322zm2.644 0h1.322v1.322H12.66zm-3.965 1.322h1.321v1.321H8.696zm1.321 1.321h1.322v1.322h-1.322zm1.322-1.321h1.322v1.321h-1.322zm2.644 0h1.322v1.321h-1.322zm-1.322 1.321h1.322v1.322H12.66zm-1.322 1.322h1.322v1.322h-1.322zm-1.321 0H8.78c.113.492.336.941.642 1.322h.595zm3.965 1.322h.594c.306-.38.529-.83.642-1.322h-1.236zm-3.966 0v.577c.385.289.834.496 1.322.596v-1.173zm2.644 0v1.173a3.3 3.3 0 0 0 1.322-.596v-.577z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#fcfcfc"
    />
    <path
      d="M11.957 7.087h-.914a3.043 3.043 0 1 1-6.087 0h-.913a3.96 3.96 0 0 0 2.877 3.807c-.182.346-.155.781.105 1.106l.995-.798.995.798a1.01 1.01 0 0 0 .1-1.116 3.96 3.96 0 0 0 2.842-3.797"
      fill="#6da544"
    />
    <path
      d="M5.565 6.783s0 1.521 1.522 1.521l.304.305H8s.304-.913.913-.913c0 0 0-.609.609-.609h.913s-.305-1.217 1.217-2.13l-.609-.305S8.913 6.174 7.391 5.87v.608h-.608l-.305-.304z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#fcfcfc"
    />
    <path
      d="M11.957 7.087h-.914a3.043 3.043 0 1 1-6.087 0h-.913a3.96 3.96 0 0 0 2.877 3.807c-.182.346-.155.781.105 1.106l.995-.798.995.798a1.01 1.01 0 0 0 .1-1.116 3.96 3.96 0 0 0 2.842-3.797"
      fill="#6da544"
    />
    <path
      d="M5.565 6.783s0 1.521 1.522 1.521l.304.305H8s.304-.913.913-.913c0 0 0-.609.609-.609h.913s-.305-1.217 1.217-2.13l-.609-.305S8.913 6.174 7.391 5.87v.608h-.608l-.305-.304z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#8a8a8a"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#d5d5d5"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CyprusFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#fcfcfc"
    />
    <path
      d="M17.37 10.76h-1.24a4.13 4.13 0 0 1-8.26 0H6.63a5.37 5.37 0 0 0 3.904 5.168c-.247.469-.21 1.06.143 1.5l1.35-1.082 1.35 1.082a1.38 1.38 0 0 0 .137-1.514 5.37 5.37 0 0 0 3.855-5.153"
      fill="#6da544"
    />
    <path
      d="M8.696 10.348s0 2.065 2.065 2.065l.413.413H12s.413-1.239 1.24-1.239c0 0 0-.826.825-.826h1.24s-.414-1.652 1.651-2.891l-.826-.413s-2.89 2.065-4.956 1.652v.826h-.826l-.413-.413z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M7.391 8s-4.337 4.95-4.34 4.95A7 7 0 0 0 15 8z"
      fill="#d80027"
    />
    <path
      d="M3.05 3.05a7 7 0 0 0 0 9.9L8 8z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M7.391 8s-4.337 4.95-4.34 4.95A7 7 0 0 0 15 8z"
      fill="#d80027"
    />
    <path
      d="M3.05 3.05a7 7 0 0 0 0 9.9L8 8z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#454545"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      CzechRepublicFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M11.174 12s-5.886 6.719-5.892 6.718A9.5 9.5 0 0 0 21.5 12z"
      fill="#d80027"
    />
    <path
      d="M5.282 5.282a9.5 9.5 0 0 0 0 13.436L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M6.478 7.087h8.463a7 7 0 0 0-8.463-5.92zm-1.826 0V1.85A7 7 0 0 0 1.06 7.087zm0 1.826H1.06a7 7 0 0 0 3.593 5.236zm1.826 0v5.92a7 7 0 0 0 8.462-5.92z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M6.478 7.087h8.463a7 7 0 0 0-8.463-5.92zm-1.826 0V1.85A7 7 0 0 0 1.06 7.087zm0 1.826H1.06a7 7 0 0 0 3.593 5.236zm1.826 0v5.92a7 7 0 0 0 8.462-5.92z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.854 10.76H21.34c-.607-4.66-4.593-8.26-9.42-8.26-.709 0-1.4.078-2.065.226zm-2.478 0V3.656A9.5 9.5 0 0 0 2.5 10.761zm0 2.48H2.5a9.5 9.5 0 0 0 4.876 7.105zm2.478 0v8.034a9.5 9.5 0 0 0 2.066.226c4.826 0 8.812-3.6 9.419-8.26z"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      DenmarkFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M9.935 10.76h11.484C20.812 6.1 16.826 2.5 12 2.5c-.709 0-1.4.078-2.064.226zm-2.479 0V3.656a9.5 9.5 0 0 0-4.876 7.106zm0 2.48H2.58a9.5 9.5 0 0 0 4.876 7.105zm2.479 0v8.034A9.5 9.5 0 0 0 12 21.5c4.826 0 8.812-3.6 9.42-8.26z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8"
      fill="#000"
    />
    <path
      d="M8 1C4.99 1 2.425 2.9 1.435 5.565h13.13A7 7 0 0 0 8 1"
      fill="#0052b4"
    />
    <path
      d="M14.565 10.435H1.435a7.002 7.002 0 0 0 13.13 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M1 8c0 .856.154 1.676.435 2.435L8 10.739l6.565-.304A7 7 0 0 0 15 8c0-.856-.154-1.676-.435-2.435L8 5.261l-6.565.304A7 7 0 0 0 1 8"
      fill="#000"
    />
    <path
      d="M8 1C4.99 1 2.425 2.9 1.435 5.565h13.13A7 7 0 0 0 8 1"
      fill="#0052b4"
    />
    <path
      d="M14.565 10.435H1.435a7.002 7.002 0 0 0 13.13 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#444"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      EstoniaFlag
    </title>
    <path
      d="M2.5 12a9.5 9.5 0 0 0 .59 3.304l8.91.413 8.91-.413A9.5 9.5 0 0 0 21.5 12a9.5 9.5 0 0 0-.59-3.304L12 8.283l-8.91.413A9.5 9.5 0 0 0 2.5 12"
      fill="#000"
    />
    <path
      d="M12 2.5a9.5 9.5 0 0 0-8.909 6.196h17.818A9.5 9.5 0 0 0 12 2.5"
      fill="#0052b4"
    />
    <path
      d="M20.91 15.304H3.09a9.503 9.503 0 0 0 17.818 0"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M14.94 7.087H6.479v-5.92a7 7 0 0 0-1.826.684v5.236H1.06a7 7 0 0 0 0 1.826h3.593v5.236a7 7 0 0 0 1.826.685v-5.92h8.463a7 7 0 0 0 0-1.827"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M14.94 7.087H6.479v-5.92a7 7 0 0 0-1.826.684v5.236H1.06a7 7 0 0 0 0 1.826h3.593v5.236a7 7 0 0 0 1.826.685v-5.92h8.463a7 7 0 0 0 0-1.827"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FinlandFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.42 10.76H9.935V2.727c-.878.195-1.71.51-2.478.93v7.105H2.58a9.6 9.6 0 0 0 0 2.478h4.876v7.106c.769.419 1.6.735 2.479.93V13.24H21.42a9.6 9.6 0 0 0 0-2.478"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M7.5 14.5a7 7 0 1 0 0-14 7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M14.5 7.5c0-3.01-1.9-5.576-4.565-6.565v13.13A7 7 0 0 0 14.5 7.5"
      fill="#d80027"
    />
    <path
      d="M.5 7.5c0 3.01 1.9 5.576 4.565 6.565V.935A7 7 0 0 0 .5 7.5"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M7.5 14.5a7 7 0 1 0 0-14 7 7 0 0 0 0 14"
      fill="#f0f0f0"
    />
    <path
      d="M14.5 7.5c0-3.01-1.9-5.576-4.565-6.565v13.13A7 7 0 0 0 14.5 7.5"
      fill="#d80027"
    />
    <path
      d="M.5 7.5c0 3.01 1.9 5.576 4.565 6.565V.935A7 7 0 0 0 .5 7.5"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#454545"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      FranceFlag
    </title>
    <path
      d="M12 21.5a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19"
      fill="#f0f0f0"
    />
    <path
      d="M21.5 12a9.5 9.5 0 0 0-6.196-8.91v17.82A9.5 9.5 0 0 0 21.5 12"
      fill="#d80027"
    />
    <path
      d="M2.5 12a9.5 9.5 0 0 0 6.196 8.91V3.09A9.5 9.5 0 0 0 2.5 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;
